Finished language localizaton

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: language_localization
 description: "A new Flutter project."
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -9,11 +9,10 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
-
   flutter:
     sdk: flutter
-  flutter_localization: ^0.2.2
-  
+  flutter_localizations:
+    sdk: flutter
   intl: ^0.19.0
   intl_utils: ^2.8.7
 
@@ -26,3 +25,5 @@ flutter:
   uses-material-design: true
   generate: true
 
+  assets:
+    - lib/l10n/
