--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,8 +1,5 @@
-# arb-dir: lib/l10n
-# template-arb-file: lang_en.arb
-# output-localization-file: app_localizations.dart
 arb-dir: lib/l10n
-template-arb-file: lang_en.arb
+template-arb-file: intl_en.arb
 output-dir: lib/generated
 output-localization-file: l10n.dart
 output-class: AppLocalizations
